@@ -1,3 +1,7 @@
+  08 Jul 2017; Manuel Friedli <manuel@fritteli.ch> -gitaly-0.10.0-r1.ebuild,
+  gitaly-0.11.2.ebuild:
+  www-servers/gitaly:  Add ebuid for gitaly-0.11.2
+
 *gitaly-0.11.0 (17 Jun 2017)
 *gitaly-0.11.2 (17 Jun 2017)
 
